Fixed Markdown errors.

--- a/posole.html
+++ b/posole.html
@@ -105,47 +105,54 @@
 		<h2 id="ingredients">Ingredients:</h2>
 
 		<ul>
-		<li>1/4-1/2 cup, canola oil </li>
-		<li>12 cups chicken stock</li>
-		<li>2 onions, peeled and left whole</li>
-		<li>2 whole cloves</li>
-		<li>2 lbs. boneless pork shoulder in one piece</li>
-		<li>1 smoked ham hock</li>
-		<li>1 pig&#8217;s foot</li>
-		<li>1 28 oz can white hominy</li>
-		<li>1 recipe Chile Paste (recipe follows)</li>
-		<li>salt &amp; pepper to taste</li>
-		<li><p>1 1/2 tsp Mexican hot sauce (Tapatío, etc.)</p></li>
-		<li><p>Stud each onion with a clove and reserve. Drain the can of hominy and wash thoroughly to remove any canned taste. Reserve.</p></li>
-		<li>In large stock pot or dutch oven, cover the bottom of the pot with a 1/8in layer of canola oil and heat over medium high. When shimmering, salt the pork shoulder and brown it on all sides (12 minutes or so). Remove to a cutting board to cool. When cool enough to handle, cut the pork shoulder into 1in cubes. Drain the oil from the pot, leaving any brown bits.</li>
-		<li>In the pot, combine the chicken stock, the studded onions, the pork shoulder, the ham hock, the pig&#8217;s foot, and the chile paste. Bring to a boil. Reduce the heat and simmer for two hours on medium low.</li>
-		<li>Add the drained hominy. Bring to a boil. Reduce the heat and simmer for an additional hour.</li>
-		<li>Remove and discard the studded onions, the pig&#8217;s foot, and the ham hock (pick the meat from the ham hock, as it&#8217;s probably delicious).</li>
-		<li>(optional, but strongly recommended) Strain the hominy and pork from the broth, reserving the broth. Return the strained broth to the original cooking pot and boil over medium high for approximately 20min. or until reduced by 1/4. Return the pork and hominy.</li>
-		<li>Add the hot sauce to the posole, season with salt and pepper, and serve.</li>
+			<li>1/4-1/2 cup, canola oil </li>
+			<li>12 cups chicken stock</li>
+			<li>2 onions, peeled and left whole</li>
+			<li>2 whole cloves</li>
+			<li>2 lbs. boneless pork shoulder in one piece</li>
+			<li>1 smoked ham hock</li>
+			<li>1 pig’s foot</li>
+			<li>1 28 oz can white hominy</li>
+			<li>1 recipe Chile Paste (recipe follows)</li>
+			<li>salt &amp; pepper to taste</li>
+			<li>1 1/2 tsp Mexican hot sauce (Tapatío, etc.)</li>
 		</ul>
 
-		<h2 id="chile_paste">Chile Paste:</h2>
+		<ol>
+			<li>Stud each onion with a clove and reserve. Drain the can of hominy and wash thoroughly to remove any canned taste. Reserve.</li>
+			<li>In large stock pot or dutch oven, cover the bottom of the pot with a 1/8in layer of canola oil and heat over medium high. When shimmering, salt the pork shoulder and brown it on all sides (12 minutes or so). Remove to a cutting board to cool. When cool enough to handle, cut the pork shoulder into 1in cubes. Drain the oil from the pot, leaving any brown bits.</li>
+			<li>In the pot, combine the chicken stock, the studded onions, the pork shoulder, the ham hock, the pig’s foot, and the chile paste. Bring to a boil. Reduce the heat and simmer for two hours on medium low.</li>
+			<li>Add the drained hominy. Bring to a boil. Reduce the heat and simmer for an additional hour.</li>
+			<li>Remove and discard the studded onions, the pig’s foot, and the ham hock (pick the meat from the ham hock, as it’s probably delicious).</li>
+			<li>(optional, but strongly recommended) Strain the hominy and pork from the broth, reserving the broth. Return the strained broth to the original cooking pot and boil over medium high for approximately 20min. or until reduced by 1/4. Return the pork and hominy.</li>
+			<li>Add the hot sauce to the posole, season with salt and pepper, and serve.</li>
+		</ol>
+
+		<h2 id="chile-paste">Chile Paste:</h2>
 
 		<ul>
-		<li>10 dried New Mexico chiles</li>
-		<li>4 dried Pasilla chiles</li>
-		<li>2 dried Arbol chiles</li>
-		<li>2 tsp dried Mexican oregano</li>
-		<li>2 cups chicken stock</li>
-		<li>1 Tbsp cumin seeds</li>
-		<li>2 tsp coriander seeds</li>
-		<li>1 Tbsp tomato paste</li>
-		<li><p>1 tsp marmite (optional)</p></li>
-		<li><p>With scissors, cut the tops off of each chile and cut in half length-wise. Remove and discard as many seeds as possible.</p></li>
-		<li>Heat a cast iron skillet over medium high heat. Add the cumin and coriander seeds. Cook, stirring occasionally, until the seeds are toasted and aromatic, at most 5 minutes. Remove the seeds, let cool, and grind into a powder using a spice grinder or a molcajete.</li>
-		<li>Reduce the heat to medium. In batches, place the chile halves skin-side up in the pan and cook until toasted and aromatic, but not black and smoking. This will initially take about 2-3 minutes but each batch will cook faster and faster.</li>
-		<li>Meanwhile, bring the 2 cups of chicken stock to a boil.</li>
-		<li>In a mixing bowl, combine the toasted chile halves with the Mexican oregano. Pour the boiling stock over the chiles, cover, and let sit for 20 minutes.</li>
-		<li>In a blender, combine the rehydrated chiles, their soaking liquid, the cumin-coriander powder, the tomato paste, and the marmite (if using). Blend over medium until a smooth paste is formed.</li>
-		<li>Strain this paste through a mesh strainer to remove any seeds and skin that will have survived the blending. You will have to push the paste through the strainer with a spatula and this will take a few minutes. In the end, all that shouldn&#8217;t have passed is some skin and a few seeds. Also, scrape the bottom of the strainer to get at any paste that has passed through the mesh but has stuck to the strainer.</li>
-		<li>Reserve the paste until need. This can (and probably should) be made 24 hours in advance.</li>
+			<li>10 dried New Mexico chiles</li>
+			<li>4 dried Pasilla chiles</li>
+			<li>2 dried Arbol chiles</li>
+			<li>2 tsp dried Mexican oregano</li>
+			<li>2 cups chicken stock</li>
+			<li>1 Tbsp cumin seeds</li>
+			<li>2 tsp coriander seeds</li>
+			<li>1 Tbsp tomato paste</li>
+			<li>1 tsp marmite (optional)</li>
 		</ul>
+
+		<ol>
+			<li>With scissors, cut the tops off of each chile and cut in half length-wise. Remove and discard as many seeds as possible.</li>
+			<li>Heat a cast iron skillet over medium high heat. Add the cumin and coriander seeds. Cook, stirring occasionally, until the seeds are toasted and aromatic, at most 5 minutes. Remove the seeds, let cool, and grind into a powder using a spice grinder or a molcajete.</li>
+			<li>Reduce the heat to medium. In batches, place the chile halves skin-side up in the pan and cook until toasted and aromatic, but not black and smoking. This will initially take about 2-3 minutes but each batch will cook faster and faster.</li>
+			<li>Meanwhile, bring the 2 cups of chicken stock to a boil.</li>
+			<li>In a mixing bowl, combine the toasted chile halves with the Mexican oregano. Pour the boiling stock over the chiles, cover, and let sit for 20 minutes.</li>
+			<li>In a blender, combine the rehydrated chiles, their soaking liquid, the cumin-coriander powder, the tomato paste, and the marmite (if using). Blend over medium until a smooth paste is formed.</li>
+			<li>Strain this paste through a mesh strainer to remove any seeds and skin that will have survived the blending. You will have to push the paste through the strainer with a spatula and this will take a few minutes. In the end, all that shouldn’t have passed is some skin and a few seeds. Also, scrape the bottom of the strainer to get at any paste that has passed through the mesh but has stuck to the strainer.</li>
+			<li>Reserve the paste until need. This can (and probably should) be made 24 hours in advance.</li>
+		</ol>
+
 	
 	
 	</body>
