--- a/posole.html
+++ b/posole.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<title>Pozolé!</title>
 		<style>
 			/*! Typebase.less v0.1.0 | MIT License */
 			/* Setup */
