Added toppings. Fixed typo.

--- a/posole.html
+++ b/posole.html
@@ -129,6 +129,16 @@
 			<li>Add the hot sauce to the posole, season with salt and pepper, and serve.</li>
 		</ol>
 
+		<h2 id="toppings">Toppings:</h2>
+		
+		<ul>
+			<li>Shredded Cabbage</li>
+			<li>Sliced Radish</li>
+			<li>Mashed Avocado</li>
+			<li>Cilantro</li>
+			<li>Diced White Onion</li>
+		</ul>
+
 		<h2 id="chile-paste">Chile Paste:</h2>
 
 		<ul>
@@ -151,7 +161,7 @@
 			<li>In a mixing bowl, combine the toasted chile halves with the Mexican oregano. Pour the boiling stock over the chiles, cover, and let sit for 20 minutes.</li>
 			<li>In a blender, combine the rehydrated chiles, their soaking liquid, the cumin-coriander powder, the tomato paste, and the marmite (if using). Blend over medium until a smooth paste is formed.</li>
 			<li>Strain this paste through a mesh strainer to remove any seeds and skin that will have survived the blending. You will have to push the paste through the strainer with a spatula and this will take a few minutes. In the end, all that shouldn’t have passed is some skin and a few seeds. Also, scrape the bottom of the strainer to get at any paste that has passed through the mesh but has stuck to the strainer.</li>
-			<li>Reserve the paste until need. This can (and probably should) be made 24 hours in advance.</li>
+			<li>Reserve the paste until needed. This can (and probably should) be made 24 hours in advance.</li>
 		</ol>
 
 	
