--- a/cccc.html
+++ b/cccc.html
@@ -115,7 +115,7 @@
             <li>JW Marriott, Room 308, Third Floor</li>
           </ul>
         </li>
-        <li>**<a href="http://center.uoregon.edu/NCTE/2014CCCC/program/search_results.php?sessionid=1743882">Mobile Data, Mobile Selves: Smartphones, Big Data and the Composition of Authorship</a>
+        <li><strong><a href="http://center.uoregon.edu/NCTE/2014CCCC/program/search_results.php?sessionid=1743882">Mobile Data, Mobile Selves: Smartphones, Big Data and the Composition of Authorship</a></strong>
           <ul>
             <li>2:00 PM - 3:15 PM</li>
             <li>JW Marriott, Room 310, Third Floor</li>
