--- a/cccc14/index.html
+++ b/cccc14/index.html
@@ -33,6 +33,8 @@
       ul {
         padding-left: 1.25em; }
       
+	  sup {
+	  	font-size: 0.75em; }
       /* line 13, (__TEMPLATE__) */
       #content {
         margin: 0 auto;
