--- a/cccc14/index.html
+++ b/cccc14/index.html
@@ -11,6 +11,7 @@
     <title>CCCC Trip</title>
     <meta content='text/javascript' http-equiv='content-script-type'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/libraries/normalize.css" />
     <style>
       /* line 1, (__TEMPLATE__) */
       body {
@@ -33,8 +34,6 @@
       ul {
         padding-left: 1.25em; }
       
-	  sup {
-	  	font-size: 0.75em; }
       /* line 13, (__TEMPLATE__) */
       #content {
         margin: 0 auto;
