--- a/beatniks.html
+++ b/beatniks.html
@@ -3,6 +3,103 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Beatniks</title>
+		<style>
+					<style>
+			/*! Typebase.less v0.1.0 | MIT License */
+			/* Setup */
+			html {
+			  /* Change default typefaces here */
+			  font-family: serif;
+			  font-size: 125%;
+			  -webkit-font-smoothing: antialiased; }
+
+			/* Copy & Lists */
+			p {
+			  line-height: 1.5rem;
+			  margin-top: 1.5rem;
+			  margin-bottom: 0; }
+
+			ul, ol {
+			  margin-top: 1.5rem;
+			  margin-bottom: 1.5rem; }
+			  ul li, ol li {
+			    line-height: 1.5rem; }
+			  ul ul, ul ol, ol ul, ol ol {
+			    margin-top: 0;
+			    margin-bottom: 0; }
+
+			blockquote {
+			  line-height: 1.5rem;
+			  margin-top: 1.5rem;
+			  margin-bottom: 1.5rem; }
+
+			/* Headings */
+			h1, h2, h3, h4, h5, h6 {
+			  /* Change heading typefaces here */
+			  font-family: sans-serif;
+			  margin-top: 1.5rem;
+			  margin-bottom: 0;
+			  line-height: 1.5rem; }
+
+			h1 {
+			  font-size: 3.75rem;
+			  line-height: 4.5rem;
+			  margin-top: 3rem; }
+
+			h2 {
+			  font-size: 2.5rem;
+			  line-height: 3rem;
+			  margin-top: 3rem; }
+
+			h3 {
+			  font-size: 1.25rem; }
+
+			h4 {
+			  font-size: 0.625rem; }
+
+			h5 {
+			  font-size: 0.41667rem; }
+
+			h6 {
+			  font-size: 0.3125rem; }
+
+			/* Tables */
+			table {
+			  margin-top: 1.5rem;
+			  border-spacing: 0px;
+			  border-collapse: collapse; }
+			  table td, table th {
+			    padding: 0;
+			    line-height: 30px; }
+
+			/* Code blocks */
+			code {
+			  vertical-align: bottom; }
+
+			/* Leading paragraph text */
+			.lead {
+			  font-size: 1.25rem; }
+
+			/* Hug a the block above you */
+			.hug {
+			  margin-top: 0; }
+			
+			
+			@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
+			html {
+				font-family: "Lato", "Helvetica", sans-serif;
+			}
+			body {
+				width: 55%;
+				margin: 0 auto;
+			}
+			a{
+				color: black;
+			}
+			a:hover{
+				color: white; background: #d33682
+			}
+		</style>
 	</head>
 	<body>
 	  <h2>Beatniks</h2>
