Added another place for maps.

--- a/santa_fe.html
+++ b/santa_fe.html
@@ -176,8 +176,8 @@
       <p>between 8 and 9: Leave house</p>
       
       <dl>
-        <dt>Drive to Inn of the Governors (505-982-4333)</dt>
-        <dd>101 W Alameda St / Santa Fe, NM 87501</dd>
+        <dt>Drive to <a href="https://www.google.com/maps/place/Inn+of+the+Governors/@35.685315,-105.940747,17z/data=!3m1!4b1!4m2!3m1!1s0x87185046b14edf9f:0x6046cf3bda7f2b85">Inn of the Governors</a> (505-982-4333)</dt>
+        <dd><a href="https://www.google.com/maps/place/Inn+of+the+Governors/@35.685315,-105.940747,17z/data=!3m1!4b1!4m2!3m1!1s0x87185046b14edf9f:0x6046cf3bda7f2b85">101 W Alameda St / Santa Fe, NM 87501</a></dd>
         <dt>Check-in 4:00</dt>
         <dd>Confirmation 9PBD232M2CP</dd>
         <dd>Reservation representative said we were upgraded to a mini-suite</dd>
