Fixed layout issues.

--- a/santa_fe.html
+++ b/santa_fe.html
@@ -387,12 +387,12 @@
       <dl>
         <dt><a href="https://www.google.com/maps/place/Pantry+Restaurant/@35.664937,-105.972481,17z/data=!3m1!4b1!4m2!3m1!1s0x87185a8066dce807:0xd2279f7b509d76ba">Pantry Restaurant</a></dt>
         <dd><a href="https://www.google.com/maps/place/Pantry+Restaurant/@35.664937,-105.972481,17z/data=!3m1!4b1!4m2!3m1!1s0x87185a8066dce807:0xd2279f7b509d76ba">1820 Cerrillos Rd</a> (Opens 6:30AM)</dd>
-        <dd>Drive to it for a diner-like atmosphere w/NM food lunch or dinner
-      <a href="https://www.google.com/maps/place/1314+Rufina+Cir/@35.6551343,-105.9948921,17z/data=!3m1!4b1!4m2!3m1!1s0x87185a5de0b14c77:0x48cc9707f8ed7541">Alicia’s Tortilleria</a> (Opens 8AM)</dd>
-        <dd>Fresh Tortillas
-      <a href="https://www.google.com/maps/place/Susan's+Fine+Wine+%26+Spirits/@35.67727,-105.953474,17z/data=!3m1!4b1!4m2!3m1!1s0x87185065ec2d827d:0x9a5774096a8c0ba9">Susan’s Fine Wine and Spirits</a> (Opens 10AM)</dd>
-        <dd><a href="https://www.google.com/maps/place/Susan's+Fine+Wine+%26+Spirits/@35.67727,-105.953474,17z/data=!3m1!4b1!4m2!3m1!1s0x87185065ec2d827d:0x9a5774096a8c0ba9">1005 South St Francis Dr #105</a>
-      <a href="https://www.google.com/maps/place/141+Osuna+Rd+NW/@35.152716,-106.630426,14z/data=!4m2!3m1!1s0x872273876a80206b:0x6a4daecce7a11653">Albuquerque Tortilla Company</a></dd>
+        <dd>Drive to it for a diner-like atmosphere w/NM food lunch or dinner</dd>
+        <dt><a href="https://www.google.com/maps/place/1314+Rufina+Cir/@35.6551343,-105.9948921,17z/data=!3m1!4b1!4m2!3m1!1s0x87185a5de0b14c77:0x48cc9707f8ed7541">Alicia’s Tortilleria</a> (Opens 8AM)</dt>
+        <dd>Fresh Tortillas</dd>
+        <dt><a href="https://www.google.com/maps/place/Susan's+Fine+Wine+%26+Spirits/@35.67727,-105.953474,17z/data=!3m1!4b1!4m2!3m1!1s0x87185065ec2d827d:0x9a5774096a8c0ba9">Susan’s Fine Wine and Spirits</a> (Opens 10AM)</dt>
+        <dd><a href="https://www.google.com/maps/place/Susan's+Fine+Wine+%26+Spirits/@35.67727,-105.953474,17z/data=!3m1!4b1!4m2!3m1!1s0x87185065ec2d827d:0x9a5774096a8c0ba9">1005 South St Francis Dr #105</a></dd>
+        <dt><a href="https://www.google.com/maps/place/141+Osuna+Rd+NW/@35.152716,-106.630426,14z/data=!4m2!3m1!1s0x872273876a80206b:0x6a4daecce7a11653">Albuquerque Tortilla Company</a></dt>
         <dd>Definitely Does Blue Corn Tortillas</dd>
       </dl>
     </div>
