--- a/contemporary-literature.html
+++ b/contemporary-literature.html
@@ -126,7 +126,8 @@
       
       /* line 16, (__TEMPLATE__) */
       h1 {
-        text-align: center; }
+        text-align: center;
+        line-height: 1; }
       
       /* line 18, (__TEMPLATE__) */
       #content {
