--- a/santa_fe2014.html
+++ b/santa_fe2014.html
@@ -106,7 +106,11 @@
         <li><a href="https://www.google.com/maps/place/La+Choza/@35.679172,-105.952892,17z/data=!3m1!4b1!4m2!3m1!1s0x8718506f2fb7c8bf:0x1473700e93dcf643">La Choza</a> (905 Alarid St)</li>
         <li><a href="https://www.google.com/maps/place/Santa+Fe+Bite/@35.691576,-105.946121,17z/data=!4m2!3m1!1s0x87185045d0805169:0xe3924e024d1a2937">Santa Fe Bite</a> (311 Old Santa Fe Trail)</li>
         <li><a href="https://www.google.com/maps/place/The+Shed+Creative+Cooking/@35.687493,-105.937052,17z/data=!3m1!4b1!4m2!3m1!1s0x87185047ad75475b:0xd1931e3bbac538b6">The Shed</a></li>
-        <li><a href="https://www.google.com/maps/place/3904+Rodeo+Rd,+Santa+Fe,+NM+87507/@35.6385833,-106.0021602,15z/">Los Amigos</a></li>
+        <li><a href="https://www.google.com/maps/place/3904+Rodeo+Rd,+Santa+Fe,+NM+87507/@35.6385833,-106.0021602,15z/">Los Amigos</a>
+          <ul>
+            <li>15% off for Seniors on Sunday</li>
+          </ul>
+        </li>
         <li><a href="https://www.google.com/maps/place/4354+Cerrillos+Rd,+Santa+Fe,+NM+87507/">Horseman’s Haven</a>
           <ul>
             <li>Might be too hot for dad</li>
