--- a/santa_fe2014.html
+++ b/santa_fe2014.html
@@ -137,6 +137,11 @@
             <li>Mixed Reviews</li>
           </ul>
         </li>
+        <li><a href="https://www.google.com/maps/place/Atrisco+Cafe+%26+Bar/@35.69225,-105.95024,17z/">Cafe Atrisco</a>
+          <ul>
+            <li>Best Bet</li>
+          </ul>
+        </li>
       </ul>
       
       <h3 id="shawnas-picks">Shawna’s Picks</h3>
