--- a/modsource/tools/file-name.html
+++ b/modsource/tools/file-name.html
@@ -66,7 +66,7 @@
             <div class='col-sm-9 col-sm-offset-3'>
               <h3 id="file-format">File Format</h3>
               
-              <p><em>If you don't know what this means, leave it as <a href="../modsource/help/markdown.html">Markdown</a>, which is the easiest format.</em></p>
+              <p><em>If you don't know what this means, leave it as <a href="/modsource/help/markdown.html">Markdown</a>, which is the easiest format.</em></p>
             </div>
             <div class='form-group'>
               <label class='control-label col-sm-3' for='format'>Format</label>
