--- a/inline-footnotes.html
+++ b/inline-footnotes.html
@@ -76,7 +76,7 @@
 			</div>
 		</section>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
-		<script src="/dist/jquery.inline-footnotes.min.js" type="text/javascript"></script>
+		<script src="javascripts/jquery.inline-footnotes.min.js" type="text/javascript"></script>
 		<script>
 		  $(document).ready(function() {
 		  	//$.inlineFootnotes();
