--- a/inline-footnotes.html
+++ b/inline-footnotes.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="description" content="Javascript, responsive footnotes">
 		<meta name="author" content="Andrew Pilsch">
+		
+		<title>Responsive, Inline Footnotes Using jQuery</title>
 
 		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="//typebase.pilsch.com/typebase/?baseFontSize=20&baseLineHeight=1.5&scale=&production=on">
