Mobile / Desktop instructions.

--- a/inline-footnotes.html
+++ b/inline-footnotes.html
@@ -15,7 +15,7 @@
 			body {
 				font-family: "Georgia", "Times New Roman", serif !important;
 				font-size: inherit;
-				padding-top: 150px;
+				padding-top: 250px;
 			}
 			/* centered columns styles */
 			.row-centered {
@@ -39,7 +39,9 @@
 	<body>
 		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container text-center">
-					<button class="btn btn-primary btn-lg" onclick="$.inlineFootnotes();">Click to Inline Footnotes!</button>
+					<button class="btn btn-primary btn-lg" onclick="$.inlineFootnotes();">Click to Add Inline Footnotes!</button>
+					<p class="visible-sm visible-xs">Expand window to see sidebar footnotes.</p>
+					<p class="visible-lg visible-md">Shrink window to see inline, accordion footnotes.</p>
 					<p>For more information, <a href="https://github.com/oncomouse/jquery-inline-footnotes">click here</a>.</p>
 			</div>
 		</nav>
