--- a/mla16.html
+++ b/mla16.html
@@ -7,7 +7,7 @@
   <!--<![endif]-->
   <head>
     <meta charset='utf-8'>
-    <title>Andrew Pilsch</title>
+    <title>Critical Informatics & The Digital Humanities</title>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <link href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.2/journal/bootstrap.min.css' media='all' rel='stylesheet'>
     <style>
