--- a/scroll.html
+++ b/scroll.html
@@ -14,7 +14,7 @@
     <link href="http://cloud.webtype.com/css/e115d7e0-5ab8-48c5-b4bb-a7605ef90ab3.css" rel="stylesheet" type="text/css" media="all" />
     <link href="http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic" rel="stylesheet" type="text/css" media="all" />
     <link href="stylesheets/scroll.css" rel="stylesheet" type="text/css" media="all" />
-    <script src="javascripts/vendor/modernizr/modernizr.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
     <script>
       // Cache calls to $(document).ready():
       // (source: http://scott.donnel.ly/yepnope-jquery-document-ready/)
