--- a/major.html
+++ b/major.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <section id='explanation'>
-      <h1>Brainstorming Major Ideas</h1>
-      <p>This website randomly generates a major name based on some of the keywords we have been throwing around and the pattern:</p>
+      <h1>Interdisciplinary Major Ideas</h1>
+      <p>This website randomly generates a major name for an interdisciplinary technology and humanities degree based on the following pattern:</p>
       
       <pre><code>&lt;computational term&gt; &lt;production term&gt; and &lt;analytical term&gt;&#x000A;</code></pre>
       
