Changed the title.

--- a/major.html
+++ b/major.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset='utf-8'>
     <title>
-      Brainstorming Major Ideas
+      Interdisciplinary Major Names
     </title>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <link href="http://fonts.googleapis.com/css?family=Lato:700italic" media="all" rel="stylesheet" type="text/css" />
@@ -16,7 +16,7 @@
   </head>
   <body>
     <section id='explanation'>
-      <h1>Interdisciplinary Major Ideas</h1>
+      <h1>Interdisciplinary Major Names</h1>
       <p>This website randomly generates a major name for an interdisciplinary technology and humanities degree based on the following pattern:</p>
       
       <pre><code>&lt;computational term&gt; &lt;production term&gt; and &lt;analytical term&gt;&#x000A;</code></pre>
