--- a/major.html
+++ b/major.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <section id='explanation'>
-      <h1>Interdisciplinary Major Names</h1>
+      <h1>Interdisciplinary Majors</h1>
       <p>This website randomly generates a major name for an interdisciplinary technology and humanities degree based on the following pattern:</p>
       
       <pre><code>&lt;computational term&gt; &lt;production term&gt; and &lt;analytical term&gt;&#x000A;</code></pre>
