--- a/inline-footnotes.html
+++ b/inline-footnotes.html
@@ -79,7 +79,7 @@
 				</article>
 			</div>
 		</section>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
 		<script src="javascripts/jquery.inline-footnotes.min.js" type="text/javascript"></script>
 		<script>
 		  $(document).ready(function() {
