--- a/major.html
+++ b/major.html
@@ -11,7 +11,7 @@
       Interdisciplinary Major Names
     </title>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
-    <link href="http://fonts.googleapis.com/css?family=Lato:700italic" media="all" rel="stylesheet" type="text/css" />
+    <link href="//fonts.googleapis.com/css?family=Lato:700italic" media="all" rel="stylesheet" type="text/css" />
     <link href="stylesheets/major.css" media="all" rel="stylesheet" type="text/css" />
   </head>
   <body>
