Updated Tracery grammars

--- a/grammar.html
+++ b/grammar.html
@@ -13,7 +13,7 @@
 		<p>We made an insult generator using <a href="http://www.pangloss.com/seidel/shake_rule.html">The Shakespeare Insult Kit</a>.</p>
 	</div>
 	<div class="wrapper-small">
-		<div id="story" class="tracery fw-semibold fs-large"></div>
+		<div id="story" class="tracery fw-semibold fs-large ta-center"></div>
 		<form>
 			<label for="numberOfStories" class="textfield">
 				<input type="number" id="numberOfStories" value="1">
