--- a/copia.html
+++ b/copia.html
@@ -13,7 +13,7 @@
 		<p>Copia that expands on “A bird in the hand is worth two in the bush” using <a href="https://github.com/dariusk/corpora/blob/master/data/plants/plants.json">a corpus of plants</a>, one of <a href="https://github.com/dariusk/corpora/blob/master/data/animals/common.json">common animals</a>, and <a href="https://github.com/dariusk/corpora/blob/master/data/humans/bodyParts.json">one of human body parts</a>.</p>
 	</div>
 	<div class="wrapper-small">
-		<div id="story" class="tracery fw-semibold fs-large ta-center"></div>
+		<div id="story" class="tracery fw-semibold fs-large"></div>
 		<form>
 			<label for="numberOfStories" class="textfield">
 				<input type="number" id="numberOfStories" value="1">
