Load Tracery and the controls off a CDN

--- a/grammar.html
+++ b/grammar.html
@@ -44,7 +44,7 @@
 			]
 		}
 	</script>
-	<script src="/javascripts/tracery/tracery.min.js" async></script>
-	<script src="/javascripts/tracery/controls.min.js" async></script>
+	<script src="https://cdn.rawgit.com/oncomouse/oncomouse.github.io/9b1cb417/javascripts/tracery/tracery.min.js" async></script>
+	<script src="https://cdn.rawgit.com/oncomouse/oncomouse.github.io/9b1cb417/javascripts/tracery/controls.min.js" async></script>
 </body>
 </html>
