--- a/cardscore/index.html
+++ b/cardscore/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-		<title>Sample React-Redux App</title>
+		<title>Cardscore!</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 	</head>
 	<body>
