--- a/cardscore/index.html
+++ b/cardscore/index.html
@@ -7,5 +7,5 @@
 	</head>
 	<body>
 		<div id="react"></div>
-	<script type="text/javascript" src="bundle.js"></script></body>
+	<script type="text/javascript" src="/cardscore/bundle.js"></script></body>
 </html>
