Added git instructions.

--- a/vim.html
+++ b/vim.html
@@ -186,8 +186,15 @@
           <ul>
             <li><kbd>:call (Html|JS|CSS)Beautify()</kbd> - Beautify (using .editorconfig)
               current file.</li>
-	    <li><kbd>:call dein#update()</kbd> - Update installed packages.</li>
-	    <li><kbd>:Goyo</kbd> - Activate distraction-free writing.</li>
+            <li><kbd>:call dein#update()</kbd> - Update installed packages.</li>
+            <li><kbd>:Goyo</kbd> - Activate distraction-free writing.</li>
+          </ul>
+          <h2 class="plugin">Fugitive (Git)</h2>
+          <ul>
+            <li><kbd>:Gstatus</kbd> - Load status. <kbd>-</kbd> adds or resets files.
+              <kbd>cc</kbd> commits. <kbd>U</kbd> undoes changes.</li>
+            <li><kbd>:Gpush</kbd> - Push. Include minimum of <kbd>-u</kbd> as an option.</li>
+          </ul>
         </div>
         <div class="grid-lg-1-3">
           <h2>Cut and paste</h2>
