Added fuzzy search.

--- a/vim.html
+++ b/vim.html
@@ -188,6 +188,7 @@
               current file.</li>
             <li><kbd>:call dein#update()</kbd> - Update installed packages.</li>
             <li><kbd>:Goyo</kbd> - Activate distraction-free writing.</li>
+	    <li><kbd>Ctrl + P</kbd> - Activate Fuzzy search (<kbd>Ctrl + B</kbd> opens most recent files; <kbd>backspace</kbd> closes)</li>
           </ul>
           <h2 class="plugin">Fugitive (Git)</h2>
           <ul>
