Added sentence and paragraph move commands.

--- a/vim.html
+++ b/vim.html
@@ -58,6 +58,8 @@
             </li>
             <li><kbd>%</kbd> - move to matching character (default supported pairs: '()',
               '{}', '[]' - use <code>:h matchpairs</code> in vim for more info)</li>
+	    <li><kbd>)</kbd> OR <kbd>(</kbd> - move forward or backward one sentence</li>
+	    <li><kbd>}</kbd> OR <kbd>{</kbd> - move forward or backward one paragraph</li>
             <li><kbd>0</kbd> - jump to the start of the line</li>
             <li><kbd>^</kbd> - jump to the first non-blank character of the line</li>
             <li><kbd>$</kbd> - jump to the end of the line</li>
