--- a/vim.html
+++ b/vim.html
@@ -5,21 +5,14 @@
   <meta charset="UTF-8">
   <title>Vim Cheatsheet</title>
   <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="stylesheets/vim.css">
-  <style>
-    .plugin:after {
-      content: " (Plugin)";
-      color: #FA4949;
-      font-size: 0.8em;
-    }
-  </style>
+  <link rel="stylesheet" href="stylesheets/cheatsheet.css">
 </head>
 
 <body class="en_us">
   <div class="container">
     <div class="grid-block">
       <div class="grid-1">
-        <h1><a class="site-title" href="/">Vim Cheat Sheet</a></h1>
+        <h1><a class="site-title" href="/">Vim Cheatsheet</a></h1>
         <p><em>
 		This is based off the version at <a href="https://vim.rtorr.com/">https://vim.rtorr.com/</a>. I have added some commands for plugins I use.
 	</em></p>
