New commands from surround.vim

--- a/vim.html
+++ b/vim.html
@@ -184,6 +184,10 @@
             <li><kbd>:call dein#update()</kbd> - Update installed packages.</li>
             <li><kbd>:Goyo</kbd> - Activate distraction-free writing.</li>
 	    <li><kbd>Ctrl + P</kbd> - Activate Fuzzy search (<kbd>Ctrl + B</kbd> opens most recent files; <kbd>backspace</kbd> closes)</li>
+	    <li><kbd>cs{from}{to}</kbd> - Change surround {from} to {to}.</li>
+	    <li><kbd>ysiw{to}</kbd> - Wrap with {to} (needs to be end, if paired; so ")" or "]")</li>
+	    <li><kbd>yss{to}</kbd> - Wrap entire line with {to}</li>
+	    <li><kbd>S{to}</kbd> - In line-wise visual mode (<kbd>V</kbd>), wrap selection with {to}</li>
           </ul>
           <h2 class="plugin">Fugitive (Git)</h2>
           <ul>
