--- a/vim.html
+++ b/vim.html
@@ -188,6 +188,9 @@
 	    <li><kbd>ysiw{to}</kbd> - Wrap with {to} (needs to be end, if paired; so ")" or "]")</li>
 	    <li><kbd>yss{to}</kbd> - Wrap entire line with {to}</li>
 	    <li><kbd>S{to}</kbd> - In line-wise visual mode (<kbd>V</kbd>), wrap selection with {to}</li>
+	    <li><kbd>:IndentGuidesEnable</kbd> - Enable indentation guides</li>
+	    <li><kbd>gJ</kbd> - Join block into a one-liner</li>
+	    <li><kbd>gS</kbd> - Split one-liner into a block</li>
           </ul>
           <h2 class="plugin">Fugitive (Git)</h2>
           <ul>
