--- a/conference-materials/rsa18/aliens/index.html
+++ b/conference-materials/rsa18/aliens/index.html
@@ -13,10 +13,10 @@
             <h4>Slides</h4>
             <p>
                 Click on the slides and then use <kbd>&#8592;</kbd> and <kbd>&#8594;</kbd> to navigate.
-                Alternately, <a href="http://oncomouse.github.io/slides/conferences/rsa18/aliens.html#1" target="_blank">click here to open in a new window</a>.
+                Alternately, <a href="//oncomouse.github.io/slides/conferences/rsa18/aliens.html#1" target="_blank">click here to open in a new window</a>.
             </p>
             <div class="ta-center">
-                <iframe style="width: 800px; height: 600px;" src="http://oncomouse.github.io/slides/conferences/rsa18/aliens.html#1"></iframe>
+                <iframe style="width: 800px; height: 600px;" src="//oncomouse.github.io/slides/conferences/rsa18/aliens.html#1"></iframe>
             </div>
             <h4>Transcript</h4>
             <p>
