--- a/conference-materials/index.html
+++ b/conference-materials/index.html
@@ -9,10 +9,14 @@
         <div class="wrapper">
             <h1 class="ta-center">Andrew Pilsch Conference Materials</h1>
             <ul class="fs-large links">
-                <li>
-                    <a href="rsa18">RSA 18</a>
-                    <small>(2 presentations)</small>
-                </li>
+              <li>
+                  <a href="frankenreads">"It's Alive!": Frankenstein's Monster 200 Years Later</a>
+                  <small>(2 presentations)</small>
+              </li>
+              <li>
+                  <a href="rsa18">RSA 18</a>
+                  <small>(2 presentations)</small>
+              </li>
                 <li>
                     <a href="dhsi18">DHSI 2018</a>
                     <small>(1 presentation)</small>
