--- a/conference-materials/index.html
+++ b/conference-materials/index.html
@@ -11,7 +11,7 @@
             <ul class="fs-large links">
               <li>
                   <a href="frankenreads">"It's Alive!": Frankenstein's Monster 200 Years Later</a>
-                  <small>(2 presentations)</small>
+                  <small>(1 presentation)</small>
               </li>
               <li>
                   <a href="rsa18">RSA 18</a>
