--- a/conference-materials/frankenreads/index.html
+++ b/conference-materials/frankenreads/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-        <link rel="stylesheet" type="text/css" href="../../css/project.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/project.css"/>
 		<title>Conference Materials – RSA 18 – Alien Megastructures</title>
 	</head>
 	<body>
