--- a/readings/gorgias/index.html
+++ b/readings/gorgias/index.html
@@ -45,7 +45,7 @@
     <hr class="mw4 bb bw1 b--black-20 mt4 mb0">
 
     <h2>
-      <a class="sect" name="cite"><strong>*</strong>Brian Donovan's copyright notice</a>
+      <a id="cite"><strong>*</strong>Brian Donovan's copyright notice</a>
     </h2>
 
     <p class="lh-copy">Translation ©1999 by Brian R. Donovan. This translation is offered by the translator (a Professor of English at Bemidji State University) for the free and unrestricted use of students, teachers, and scholars everywhere, consistent with academic integrity. The translation may be non-commercially reproduced in full in any format, provided that such reproduction includes this copyright notice.  Quotations from this translation should be accompanied by due acknowledgment of their source.  Commercial publishers wishing to make use of this translation should contact the translator.</p>
