--- a/conference-materials/msa2019/index.html
+++ b/conference-materials/msa2019/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
         <link rel="stylesheet" type="text/css" href="../css/project.css"/>
-		<title>Conference Materials – RSA 18 – Alien Megastructures</title>
+		<title>Conference Materials – MSA 2019</title>
 	</head>
 	<body>
         <div class="wrapper">
