Fixed work cited

--- a/conference-materials/msa2019/index.html
+++ b/conference-materials/msa2019/index.html
@@ -54,7 +54,7 @@
               <p>Dick, Philip K. <em>The Three Stigmata of Palmer Eldritch</em>. Vintage, 1991.</p>
               </div>
               <div id="ref-fitting_reality_1983">
-              <p>Fitting, Peter. “Reality as Ideological Construct: A Reading of Five Novels by Philip K. Dick (de La Réalité Comme Construction Idéologique: Lecture de Cinq Romans de Philip K. Dick).” <em>Science Fiction Studies</em>, vol. 10, no. 2, 1983, pp. 219–36, <a href="http://www.jstor.org/stable/4239550">http://www.jstor.org/stable/4239550</a>.</p>
+              <p>Fitting, Peter. “Reality as Ideological Construct: A Reading of Five Novels by Philip K. Dick.” <em>Science Fiction Studies</em>, vol. 10, no. 2, 1983, pp. 219–36, <a href="http://www.jstor.org/stable/4239550">http://www.jstor.org/stable/4239550</a>.</p>
               </div>
               <div id="ref-fitting_ubik_1975">
               <p>---. “"Ubik": The Deconstruction of Bourgeois SF.” <em>Science Fiction Studies</em>, vol. 2, no. 1, 1975, pp. 47–54, <a href="http://www.jstor.org/stable/4238910">http://www.jstor.org/stable/4238910</a>.</p>
