--- a/tracery-editor/index.html
+++ b/tracery-editor/index.html
@@ -18,7 +18,7 @@
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="apple-touch-icon" href="http://tracery.io/apple-touch-icon.png">
-		<link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Lato:400,700,400italic' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
@@ -68,12 +68,13 @@
 
 		<!-- /container -->
 
-		<script src="js/vendor/jquery.min.js"></script>
-		<script src="js/vendor/jquery-ui.js"></script>
-		<script src="js/vendor/seedrandom.js"></script>
+                <script src="//cdnjs.cloudflare.com/ajax/libs/localforage/1.7.3/localforage.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
 	
 
-		<script type="text/javascript" src="js/vendor/jquery.ui.touch-punch.min.js"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 
 		<script src="js/tracery/mods-eng-basic.js"></script>
 	
