--- a/tracery-editor/index.html
+++ b/tracery-editor/index.html
@@ -68,6 +68,10 @@
 
 		<!-- /container -->
 
+                <script src="//cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
+                <script src="//cdnjs.cloudflare.com/ajax/libs/blob-polyfill/4.0.20190430/Blob.min.js"></script>
+                <script>var module=''</script>
+                <script src="//unpkg.com/lodash.isequal@4.5.0/index.js"></script>
                 <script src="//cdnjs.cloudflare.com/ajax/libs/localforage/1.7.3/localforage.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
