--- a/conference-materials/index.html
+++ b/conference-materials/index.html
@@ -1,31 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-	<head>
-		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-        <link rel="stylesheet" type="text/css" href="css/project.css"/>
-		<title>Conference Materials</title>
-	</head>
-	<body>
-        <div class="wrapper">
-            <h1 class="ta-center">Andrew Pilsch Conference Materials</h1>
-            <ul class="fs-large links">
-              <li>
-                <a href="msa2019">MSA 2019</a>
-                <small>(1 presentation)</small>
-              </li>
-              <li>
-                  <a href="frankenreads">"It's Alive!": Frankenstein's Monster 200 Years Later</a>
-                  <small>(1 presentation)</small>
-              </li>
-              <li>
-                  <a href="rsa18">RSA 18</a>
-                  <small>(2 presentations)</small>
-              </li>
-                <li>
-                    <a href="dhsi18">DHSI 2018</a>
-                    <small>(1 presentation)</small>
-                </li>
-            </ul>
-        </div>
-	</body>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" type="text/css" href="/conference-materials/css/project.css" />
+    <title>Conference Materials</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <h1 class="ta-center">Andrew Pilsch Conference Materials</h1>
+      <ul class="fs-large links">
+        <li>
+          <a href="/conference-materials/msa2019">MSA 2019</a>
+          <small>(1 presentation)</small>
+        </li>
+        <li>
+          <a href="/conference-materials/frankenreads"
+            >"It's Alive!": Frankenstein's Monster 200 Years Later</a
+          >
+          <small>(1 presentation)</small>
+        </li>
+        <li>
+          <a href="/conference-materials/rsa18">RSA 18</a>
+          <small>(2 presentations)</small>
+        </li>
+        <li>
+          <a href="/conference-materials/dhsi18">DHSI 2018</a>
+          <small>(1 presentation)</small>
+        </li>
+        <li>
+          <a href="/conference-materials/cwcon24">Computers & Writing 2024</a>
+          <small>(1 presentation)</small>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
