--- a/conference-materials/cwcon24/index.html
+++ b/conference-materials/cwcon24/index.html
@@ -523,7 +523,7 @@
       </p>
 
       <p>
-        Crider and Mulligan position their WriteBox as an avant-garde
+        Crider and Milligan position their WriteBox as an avant-garde
         experiment, which is weird for me, as I write on my self-built desktop
         computer running (<b><b>slide</b></b
         >) Arch Linux and typing into a 50-year-old text editor called (<b
