fix: editing changes

--- a/conference-materials/cwcon24/index.html
+++ b/conference-materials/cwcon24/index.html
@@ -506,9 +506,6 @@
         ></iframe>
       </div>
 
-      <h1 class="title">
-        Backwards into the Future: Writing the Retro-computer
-      </h1>
       <p>
         In a video for <i>Textshop Experiments</i> entitled "Haptic Heuretics,"
         Jason Crider and Chloe Anna Milligan describe a WriteBox&#x2014;a
@@ -918,61 +915,8 @@
         >)Thank You
       </p>
 
-      <style>
-        .csl-entry {
-          text-indent: -1.5em;
-          margin-left: 1.5em;
-        }
-      </style>
-      <div class="csl-bib-body">
-        <h1>References:</h1>
-        <div class="csl-entry">
-          Crider, Jason, and Chloe Anna Mulligan. “Haptic Heuretics: Electrate
-          Tinkering as Rhetorical Making.” <i>Textshop Experiments</i> 4 (2018).
-        </div>
-        <div class="csl-entry">
-          Emerson, Lori.
-          <i>Reading Writing Interfaces: From the Digital to the Bookbound</i>.
-          Minneapolis: Univ Of Minnesota Press, 2014.
-        </div>
-        <div class="csl-entry">
-          Levy, Steven. “A Spreadsheet Way of Knowledge.”
-          <i>Harper’s Magazine</i>, November 1984.
-        </div>
-        <div class="csl-entry">
-          Salus, Peter. <i>A Quarter Century Of UNIX</i>. Addison-Wesley, 1994.
-        </div>
-        <div class="csl-entry">
-          Tinnell, John.
-          <i>Actionable Media: Digital Communication Beyond the Desktop</i>. 1st
-          edition. Oxford University Press, 2017.
-        </div>
-        <div class="csl-entry">
-          ———.
-          <i
-            >The Philosopher of Palo Alto: Mark Weiser, Xerox PARC, and the
-            Original Internet of Things</i
-          >. University of Chicago Press, 2023.
-        </div>
-        <div class="csl-entry">
-          Ullman, Ellen.
-          <i>Close to Machine: Technophilia &#38; Its Discontents</i>. City
-          Lights, 1997.
-        </div>
-        <div class="csl-entry">
-          Weiser, Mark. “The Computer for the 21st Century.”
-          <i>Scientific American</i>, September 1991.
-        </div>
-        <div class="csl-entry">
-          ———. “The World Is Not a Desktop.” <i>Interactions</i> 1, no. 1
-          (January 1994): 7–8.
-          <a href="https://doi.org/10.1145/174800.174801"
-            >https://doi.org/10.1145/174800.174801</a
-          >.
-        </div>
-      </div>
       <div id="footnotes">
-        <h2 class="footnotes">Footnotes:</h2>
+        <h2 class="footnotes">Notes:</h2>
         <div id="text-footnotes">
           <div class="footdef">
             <sup
@@ -1169,6 +1113,59 @@
               </p>
             </div>
           </div>
+        </div>
+      </div>
+      <style>
+        .csl-entry {
+          text-indent: -1.5em;
+          margin-left: 1.5em;
+        }
+      </style>
+      <div class="csl-bib-body">
+        <h1>References:</h1>
+        <div class="csl-entry">
+          Crider, Jason, and Chloe Anna Mulligan. “Haptic Heuretics: Electrate
+          Tinkering as Rhetorical Making.” <i>Textshop Experiments</i> 4 (2018).
+        </div>
+        <div class="csl-entry">
+          Emerson, Lori.
+          <i>Reading Writing Interfaces: From the Digital to the Bookbound</i>.
+          Minneapolis: Univ Of Minnesota Press, 2014.
+        </div>
+        <div class="csl-entry">
+          Levy, Steven. “A Spreadsheet Way of Knowledge.”
+          <i>Harper’s Magazine</i>, November 1984.
+        </div>
+        <div class="csl-entry">
+          Salus, Peter. <i>A Quarter Century Of UNIX</i>. Addison-Wesley, 1994.
+        </div>
+        <div class="csl-entry">
+          Tinnell, John.
+          <i>Actionable Media: Digital Communication Beyond the Desktop</i>. 1st
+          edition. Oxford University Press, 2017.
+        </div>
+        <div class="csl-entry">
+          ———.
+          <i
+            >The Philosopher of Palo Alto: Mark Weiser, Xerox PARC, and the
+            Original Internet of Things</i
+          >. University of Chicago Press, 2023.
+        </div>
+        <div class="csl-entry">
+          Ullman, Ellen.
+          <i>Close to Machine: Technophilia &#38; Its Discontents</i>. City
+          Lights, 1997.
+        </div>
+        <div class="csl-entry">
+          Weiser, Mark. “The Computer for the 21st Century.”
+          <i>Scientific American</i>, September 1991.
+        </div>
+        <div class="csl-entry">
+          ———. “The World Is Not a Desktop.” <i>Interactions</i> 1, no. 1
+          (January 1994): 7–8.
+          <a href="https://doi.org/10.1145/174800.174801"
+            >https://doi.org/10.1145/174800.174801</a
+          >.
         </div>
       </div>
     </div>
